# airflow-unfactor

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  main.py  mcp.external.json.example  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: build-ui.yml  docs.yml  lint.yml  operator-docs.yml  release.yml  test.yml  typecheck.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-p1-knowledge-expansion/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-server-quality/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-p2-knowledge-expansion/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-validation-hardening/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-scaffold-mcp-wiring/: 05-01-PLAN.md  05-01-SUMMARY.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.ralph/examples/: taskflow_conversion.py
.ralph/specs/: airflow-version-detection.openspec.md  dataset-event-converter.openspec.md  provider-operators.openspec.md  sensor-trigger-converter.openspec.md
blog/: post.md
colin/: README.md  build.py  colin.toml
colin/models/: concepts.md  connections.md  patterns.md  prefect-context.md
colin/models/operators/: _index.md  aws.md  azure.md  core.md  database.md  databricks.md  dbt.md  gcp.md  http.md  kubernetes.md  sensors.md  sftp.md  spark.md
colin/output/: concepts.json  operators-databricks.json  operators-dbt.json  operators-http.json  operators-sftp.json
docs/: _config.yml  convert-reference.md  examples.md  getting-started.md  index.md  operator-coverage.md  operator-mapping.md  playbooks.md  testing.md  troubleshooting.md
docs-site/: mdx-components.tsx  next.config.mjs  next.config.ts  package-lock.json  package.json
docs-site/src/app/: globals.css  layout.tsx  page.tsx
docs-site/src/app/docs/: layout.tsx  page.mdx
docs/configuration/: external-mcp.md
docs/conversion/: connections.md  dynamic-mapping.md  jinja-templates.md  taskgroups.md  trigger-rules.md  variables.md
docs/guides/: enterprise-migration.md  prefect-cloud.md
docs/plans/: 2026-03-02-deployment-and-migration-report-design.md  2026-03-02-deployment-and-migration-report.md
docs/tools/: metrics.md  validate.md
docs/wizard/: index.md  quickstart.md
examples/: basic_conversion.py
mcp-app/: README.md  index.html  package-lock.json  package.json  server.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
mcp-app/src/: App.tsx
mcp-app/src/lib/: api.ts  mcp.ts
mcp-app/src/types/: index.ts
openspec/changes/2025-02-14-app-integration/: proposal.md  tasks.md  validation-report.md
openspec/changes/audit-and-roadmap/: design.md  proposal.md  tasks.md
openspec/changes/ci-and-docs/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/interface-experience/: design.md  proposal.md  tasks.md
openspec/changes/mcp-app-wizard/: .openspec.yaml  design.md  tasks.md
schemas/: conversion-output.json
scripts/: build-ui.sh  generate_operator_docs.py
specs/: dataset-event-converter.openspec.md  external-mcp-integration.openspec.md  external-mcp-usage.openspec.md  taskflow-converter.openspec.md
src/airflow_unfactor/: __init__.py  external_mcp.py  http_server.py  knowledge.py  server.py  validation.py
src/airflow_unfactor/analysis/: __init__.py  complexity.py  dependencies.py  parser.py  version.py
src/airflow_unfactor/converters/: __init__.py  base.py  connections.py  custom_operators.py  datasets.py  dynamic_mapping.py  jinja.py  provider_mappings.py  runbook.py  sensors.py  taskflow.py  taskgroup.py  test_generator.py  trigger_rules.py  variables.py
src/airflow_unfactor/data/: connections.json  operators-aws.json  operators-azure.json  operators-core.json  operators-database.json  operators-gcp.json  operators-kubernetes.json  operators-sensors.json  operators-spark.json  patterns.json
src/airflow_unfactor/metrics/: __init__.py
src/airflow_unfactor/tools/: analyze.py  batch.py  context.py  convert.py  explain.py  external.py  generate_deployment.py  generate_migration_report.py  lookup.py  read_dag.py  scaffold.py  search_docs.py  validate.py
src/airflow_unfactor/ui/: __init__.py  index.html
tests/: conftest.py  test_analyze.py  test_astronomer_fixtures.py  test_connections_converter.py  test_conversion_core_p3.py  test_convert.py  test_convert_tool.py  test_custom_operators.py  test_dag_settings_parser.py  test_dataset_converter.py  test_drift.py  test_dynamic_mapping.py  test_external_mcp.py  test_generate_deployment.py  test_generate_migration_report.py  test_http_server.py  test_jinja_converter.py  test_knowledge.py  test_lookup.py  test_metrics.py  test_operators.py  test_provider_operators.py  test_read_dag.py  test_runbook.py  test_scaffold.py  test_search_docs.py  test_sensor_converter.py  test_server.py  test_server_scaffold.py  test_taskflow_converter.py  test_taskgroup_converter.py  test_trigger_rules.py  test_validate.py  test_validate_tool.py  test_validation.py  test_variables_converter.py  test_version_detection.py
tests/fixtures/: azure_data_factory.py  databricks_submit_run.py  dbt_cloud_run_job.py  http_operator.py  kubernetes_pod_operator.py  simple_etl.py  ssh_operator.py
tests/fixtures/astronomer/: complex_dag_structure_rainbow.py  prepare_earnings_report.py  toy_taskflow_bash.py  toy_xcom_big_v_small.py
(+82 files in other folders)
