[project]
name = "airflow-unfactor"
version = "0.1.0"
description = "MCP server to convert Apache Airflow DAGs to Prefect flows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Prefect", email = "engineering@prefect.io" }
]
license = { text = "MIT" }
keywords = ["airflow", "prefect", "mcp", "migration", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.14.0",
    "prefect>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
ui = [
    "aiohttp>=3.9.0",
]

[project.scripts]
airflow-unfactor = "airflow_unfactor.server:main"

[project.urls]
Homepage = "https://github.com/gabcoyne/airflow-unfactor"
Documentation = "https://gabcoyne.github.io/airflow-unfactor"
Repository = "https://github.com/gabcoyne/airflow-unfactor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_unfactor"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "tests/fixtures/astronomer-*",  # External fixture files
    "tests/fixtures/snapshots/",  # Generated snapshot files
    ".ralph/",  # Generated files
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM102", # Nested if statements (can be more readable)
    "SIM103", # Return condition directly (can be clearer with if/else)
    "SIM108", # Ternary operator (multi-line if/else often clearer)
    "SIM118", # dict.keys() (explicit can be clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["airflow_unfactor"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["prefect.*", "fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/airflow_unfactor"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 77
