[project]
name = "airflow-unfactor"
version = "0.2.0"
description = "MCP server for LLM-assisted conversion of Apache Airflow DAGs to Prefect flows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Prefect", email = "engineering@prefect.io" }
]
license = { text = "MIT" }
keywords = ["airflow", "prefect", "mcp", "migration", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
airflow-unfactor = "airflow_unfactor.server:main"

[project.urls]
Homepage = "https://github.com/gabcoyne/airflow-unfactor"
Documentation = "https://gabcoyne.github.io/airflow-unfactor"
Repository = "https://github.com/gabcoyne/airflow-unfactor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_unfactor"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "tests/fixtures/astronomer-*",
    "tests/fixtures/snapshots/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",
    "SIM102",
    "SIM103",
    "SIM108",
    "SIM118",
]

[tool.ruff.lint.isort]
known-first-party = ["airflow_unfactor"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/airflow_unfactor"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
